# rm_robot_recognizer

./: CMakeLists.txt  README.md  package.xml
config/: robot_recognizer.yaml
include/rm_robot_recognizer/: robot_recognizer.hpp
launch/: robot_recognizer.launch.py
src/: robot_recognizer.cpp
